feat: 新增管理員移除訊息
